--- a/almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/AlmoxarifadoInfrastructure/AlmoxarifadoInfrastructure.csproj
+++ b/almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/AlmoxarifadoInfrastructure/AlmoxarifadoInfrastructure.csproj
@@ -16,6 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\Interfaces\IGrupoRepository.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.30" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.29" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.30">
