feat: Adicionar arquivos de índice ao controle de versão

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPC
 almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/79c709d3-a673-4481-88bb-ffe146d56a5e.vsidx
 almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/53136c44-ce77-4f35-99f2-2f50ef30e91e.vsidx
 almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/a32129fb-25ad-44bc-9841-96648ac28d19.vsidx
+almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/2dfd4bd1-8561-4884-b785-a05b7d1158d3.vsidx
+almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/28887f16-fece-44f2-ac86-77ef71d1c876.vsidx
