feat: Adicionar arquivos de índice ao controle de versão

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPC
 almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/a32129fb-25ad-44bc-9841-96648ac28d19.vsidx
 almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/2dfd4bd1-8561-4884-b785-a05b7d1158d3.vsidx
 almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/28887f16-fece-44f2-ac86-77ef71d1c876.vsidx
+almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/8eabb75c-ab22-43fb-92b2-93ab864795e8.vsidx
