--- a/almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/AlmoxarifadoServices/AlmoxarifadoServices.csproj
+++ b/almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/AlmoxarifadoServices/AlmoxarifadoServices.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="CsvHelper" Version="32.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.30" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.30">
       <PrivateAssets>all</PrivateAssets>
