feat: Adicionar arquivos de índice ao controle de versão

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPC
 almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/2dfd4bd1-8561-4884-b785-a05b7d1158d3.vsidx
 almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/28887f16-fece-44f2-ac86-77ef71d1c876.vsidx
 almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/8eabb75c-ab22-43fb-92b2-93ab864795e8.vsidx
+almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/279b5a6f-f46e-46e3-bf4e-201b8c7629f1.vsidx
+almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/62d965a0-3c2c-462d-a49b-a1c0abf596a5.vsidx
