--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPC
 almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/8eabb75c-ab22-43fb-92b2-93ab864795e8.vsidx
 almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/279b5a6f-f46e-46e3-bf4e-201b8c7629f1.vsidx
 almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/62d965a0-3c2c-462d-a49b-a1c0abf596a5.vsidx
+almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/68d1b10d-d319-43c0-8378-c59c5f57027a.vsidx
+almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/47f258b1-10fc-4077-94b9-bee07e955fa8.vsidx
+almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/47f258b1-10fc-4077-94b9-bee07e955fa8.vsidx
