feat: Adicionar arquivos de índice ao controle de versão

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPC
 almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/2170a211-6f1c-45ae-b476-9ce81112b32b.vsidx
 almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/2271ff65-36b0-40f3-9840-0c0ba51fabfd.vsidx
 almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/v17/.wsuo
+almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/ff0e40d1-a4ce-4795-af32-e1ab27035463.vsidx
+almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/89f77338-5b9d-4b5d-b176-40d1e6659f79.vsidx
+almoxarifadoback-main/src/srcBackAlmoxarifadoASPCore/.vs/srcBackAlmoxarifadoASPCore/FileContentIndex/10953a4a-7e22-43cd-8fe6-0725db689f4e.vsidx
